--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -45,7 +45,7 @@
                                 <a href="http://blog.csdn.net/u011437680">csdn链接</a>
                             </li>
                             <li role="presentation">
-                                <a href="#">吐槽bug</a>
+                                <a href="{% url 'blog:bug_talk' %}">吐槽bug</a>
                             </li>
                             <li role="presentation">
                                 <a href="#">下载</a>
@@ -161,7 +161,7 @@
     <div class="row">
         <div class="col-md-12 col-xs-12">
             <div class="col-md-4 col-xs-12 col-md-offset-4">
-                <p style="text-align: center; color:#ebebeb">豫ICP备15002086号</p>
+                <p style="text-align: center; color:#ebebeb"><a href="http://www.miibeian.gov.cn" target="_blank">豫ICP备15002086号</a></p>
             </div>
         </div>
     </div>
