--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,10 +1,61 @@
 {% extends "blog/base.html" %}
 {% load staticfiles %}
 {% load django_markdown %}
-{% load comments %}
 
+{% block script %}
+    <script src="{% static "jquery/jquery.min.js" %}"></script>
+    <script type="text/javascript" src="{% static 'js/json2.js' %}"></script>
+    <script>
+        $(document).ready(function(){
+            $.ajaxSetup({
+                 data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
+            });
+            $('#comment_form form').submit(function(){
+                var name = $("#id_name").val();
+                var content = $("#id_comment").val();
+                $('#comment_form form #submit_btn').attr('disabled', 'disabled');
+                $('#sub-change').attr('disabled','disabled');
+                $('#comment_form form #submit_btn').html(' <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>提交中');
 
+                $.ajax({
+                    type:"POST",
+                    data: {name:name, content:content},
+                    url: "{% url 'blog:showcomment' blog.id %}",
+                    cache: false,
+                    dataType: "html",
+                    success: function(result, statues, xml){
+                        if (result != 'false'){
+                            var jsonObj = new Array();
+                            jsonObj = JSON.parse(result);
+                            console.log(jsonObj);
+                            $("form #id_comment").val("");
+                            $("form #id_name").val("");
+                            var replace_html = '<div class="comment_container">' +
+                                '<div class="comment-head"><div class="comments_id"><img src="{% static "images/pbricks.png" %}" width="42" height="42"/></div>' +
+                                    '<span class="li_small_2">' +jsonObj.name+ '</span>' +
+                                    '<span class="li_small_2">' +jsonObj.date+ '</span>' +
+                                '</div>' +
+                                '<div class="comment_content">' +jsonObj.content+ '</div></div>';
 
+                            $(".comment-posted").append(replace_html);
+
+                        }
+                        else{
+                            alert("评论未能正确提交");
+                        }
+                    },
+                    error: function(){
+
+                        alert("false");
+                    }
+                });
+                $('#comment_form form #submit_btn').removeAttr('disabled');
+                $('#comment_form form #submit_btn').html('提交');
+                return false;
+            });
+        });
+    </script>
+{% endblock %}
 
 {% block title %}bricks_blog{% endblock %}
     {% block article %}
@@ -37,71 +88,55 @@
     {% block comment %}
         <div class="col-xs-12 col-md-8 comment">
            <div class="comment-posted" id="comment-posted">
-                <div class="comments">
+                <div class="comments" id="sub-change">
                 <a id="sub-relocate"></a>
                  <a name="blog_comments" id="comments"></a>
-                 {% get_comment_count for blog as comment_count %}
-                 <div class="comments_nav"><h2>评论({{ comment_count }})</h2></div>
-                 {% ifequal comment_count 0 %}
+
+                 <div class="comments_nav"><h2>评论({{ blog.comment_set.count }})</h2></div>
+                 {% ifequal blog.comment_set.count 0 %}
                     <div class="comments_body">
                         <div class="comments_container"><h2>没有评论</h2></div>
                     </div>
                  {% else %}
-                     {% get_comment_list for blog as comments %}
-                     {% for comment in comments %}
+                     {% for comment in blog.comment_set.all %}
                         <div class="comment_container">
                             <div class="comment-head">
-                            <div class="comments_id"><a href="{{ comment.user_url }}"><img src="{% static "images/pbricks.png" %}" width="42" height="42"/></a></div>
-                                <span class="li_small_2">{{ comment.user_name }}</span>
-                                <span class="li_small_2">{{ comment.submit_date | date:"Y-m-d H:i" }}</span>
+                            <div class="comments_id"><img src="{% static "images/pbricks.png" %}" width="42" height="42"/></div>
+                                <span class="li_small_2">{{ comment.name }}</span>
+{#                                <span class="li_small_2">{{ comment.date | date:"Y-m-d H:i" }}</span>#}
+                                <span class="li_small_2">{{ comment.date | date:"Y-m-d H:i" }}</span>
                             </div>
-                            <div class="comment_content">{{ comment.comment }}</div>
+                            <div class="comment_content">{{ comment.content }}</div>
                         </div>
 
                      {% endfor %}
                  {% endifequal %}
+
              </div>
            </div>
 
             <div class="comments_body" id="comment_form">
                 <div class="comments_nav"><h2>新的评论</h2></div>
-                {% get_comment_form for blog as blog_form %}
                 <div class="comments-content">
-                <form class="form-horizontal" action="{% comment_form_target %}" method="post" id="cmt_sub_form">
+                <form class="form-horizontal" method="post" id="cmt_sub_form">
                     {% csrf_token %}
-                    {{ blog_form.object_pk }}
-                    {{ blog_form.content_type }}
-                    {{ blog_form.timestamp }}
-                    {{ blog_form.submit_date }}
-                    {{ blog_form.security_hash }}
+
                     <div class="form-group">
                         <label class="control-label" for="id_name">用户名</label>
                         <input type="text" id="id_name" class="form-control" name="name" required="required" placeholder="请输入您的用户名"/>
 
                     </div>
-                    <div class="form-group">
-                        <label class="control-label" for="id_email">邮箱</label>
 
-                        <input type="email" id="id_email" class="form-control" name="email" required="required" placeholder="请输入您的邮箱地址"/>
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label" for="id_url">个人网站</label>
-
-                        <input type="url" id="id_url" class="form-control" name="url" placeholder="请输入您的网址" required="required"/>
-
-                    </div>
                     <a name="newcomment" id="newcomment"></a>
                     <div class="form-group">
                         <label class="control-label" for="id_comment">评论</label>
-
                         <textarea class="form-control" row="5" id="id_comment" name="comment" placeholder="请输入评论内容" required="required"></textarea>
-
                     </div>
                     <p style="display:none"><label for="id_honeypot">如果你在该字段输入任何内容，您的评论会被视为垃圾评论</label><input type="text" name="honeypot" id="id_honeyot"></p>
                     <div class="form-actions">
-                        <input class="btn btn-info" id="submit_btn" type="submit" value="提交"/>
-                        <input type="hidden" name="next" value="{% url 'blog:blog_detail' blog.id %}#sub-relocate"/>
+                        <button class="btn btn-info" id="submit_btn" type="submit" >提交</button>
+                        <br/>
+
                     </div>
                 </form>
                 </div>
