修改:         .idea/workspace.xml 	修改:         blog/__init__.pyc 	修改:         blog/admin.pyc 	修改:         blog/migrations/0001_initial.pyc 	修改:         blog/migrations/0002_auto_20150404_2059.pyc 	修改:         blog/migrations/0003_auto_20150405_1505.pyc 	修改:         blog/migrations/0004_comment.pyc 	修改:         blog/migrations/0005_auto_20150410_2133.pyc 	修改:         blog/migrations/0006_auto_20150410_2216.pyc 	修改:         blog/migrations/0007_remove_comment_email.pyc 	修改:         blog/migrations/0008_comment_inline.pyc 	修改:         blog/migrations/0009_bugtalk.pyc

--- a/blog/templates/blog/bug_talk.html
+++ b/blog/templates/blog/bug_talk.html
@@ -165,6 +165,9 @@
                     delete data_to_server[item]
                 }
             });
+            $("button").on('click',function(){
+                console.log("button按下时间被触发");
+            })
             $("button[id^='btn']").on('click',function(){
                 console.log("按钮点击被触发");
                 var string=$(this).attr("id").split(' ');
