--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="{% static "images/bricks.png" %}">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <script src="{% static 'jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body class="home-template">
 {#    <div style="background-color: black; width: 100%; height:100px; position: absolute;z-index:1000 "></div>#}
@@ -25,15 +27,19 @@
             </div>
         </div>
     </header>
-    <nav class="main-navigation">
-        <div class="container">
+{#    <nav class="main-navigation nav navbar-default">#}
+    <nav class="main-navigation nav navbar-default">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <div class="navbar-header">
-                        <span class="navbar-toggle-botton collapse" data-target="#main-menu">
-                            <span class="sr-only">Taggle navigation</span>
-                            <i class="fa fa-bars"></i>
-                        </span>
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-menu">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a>
                     </div>
                     <div class="collapse navbar-collapse" id="main-menu">
                         <ul class="menu">
@@ -58,6 +64,7 @@
             </div>
         </div>
     </nav>
+
     {% block modal %}
     {% endblock %}
     <section class="contant-wrap">
