--- a/blog/static/css/app.css
+++ b/blog/static/css/app.css
@@ -64,7 +64,8 @@ a:active, a:focus, a img, a h2
     background: #ffffff;
     margin-bottom: 35px;
     position:relative;
-    overflow: scroll;
+    overflow-x: scroll;
+    /*overflow-y: hidden;*/
 }
 .post .post-head{
     text-align: center;
