--- a/blog/static/css/app.css
+++ b/blog/static/css/app.css
@@ -204,7 +204,7 @@ a:active, a:focus, a img, a h2
     padding: 20px;
     margin-bottom:35px;
     position: relative;
-    overflow: scroll;
+    overflow-x: scroll;
 }
 .post-comment .comment .comment-posted .comment_container .comment-head{
     background: #ebebeb;
