complete bug_talk paginator

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -67,6 +67,8 @@
 
     {% block modal %}
     {% endblock %}
+    {% block paginator %}
+    {% endblock %}
     <section class="contant-wrap">
         <div class="container">
             <div class="row">
